--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ footer_text: >
   Header picture from <a href="https://commons.wikimedia.org/wiki/File:Watercolor_painting_of_the_earth_with_hot_gradient.jpg">Martin Eklund, CC0, via Wikimedia Commons</a>.
 
 url: ecosystemic-ai.github.io # the base hostname & protocol for your site
-baseurl: / # the subpath of your site, e.g. /blog/
+#baseurl: / # the subpath of your site, e.g. /blog/
 last_updated: # leave blank if you don't want to display last updated
 
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: i-cant-believe-its-not-better
+github_username: ecosystemic-ai
 twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
