--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-name: The Ecosystemic Challenges of AI, Workshop at HHAI 2022
+name: Hybrid Intelligence meets Human-Computer Interaction: Creating Human-AI Partnerships
 email:
 description: > # this means to ignore newlines until "url:"
    Introducing broader socio-technical and socio-ecological perspectives to the field of Artificial Intelligence (
@@ -17,7 +17,7 @@ last_updated: # leave blank if you don't want to display last updated
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: ecosystemic-ai
+github_username: himeetshci
 twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
